--- a/UI/harmonique-frontend/src/app/shared/footer/footer.component.html
+++ b/UI/harmonique-frontend/src/app/shared/footer/footer.component.html
@@ -24,12 +24,10 @@
         <div class="controls d-flex align-items-center justify-content-center gap-3 mb-1">
             <i class="bi bi-shuffle icon-btn"></i>
             <i class="bi bi-skip-backward-fill icon-btn" (click)="audioService.previous()"></i>
-            
+
             <!-- Play/Pause Button -->
-            <i class="bi play-icon" 
-                [class.bi-play-circle-fill]="!audioService.isPlaying"
-                [class.bi-pause-circle-fill]="audioService.isPlaying" 
-                (click)="audioService.togglePlay()">
+            <i class="bi play-icon" [class.bi-play-circle-fill]="!audioService.isPlaying"
+                [class.bi-pause-circle-fill]="audioService.isPlaying" (click)="audioService.togglePlay()">
             </i>
 
             <i class="bi bi-skip-forward-fill icon-btn" (click)="audioService.next()"></i>
@@ -39,11 +37,8 @@
         <div class="progress-bar-container d-flex align-items-center w-100">
             <span class="time text-white small">{{ currentTime }}</span>
 
-            <input type="range" class="form-range crossfade-slider" 
-                [min]="0" 
-                [max]="currentSongDuration || 0"
-                [value]="currentSongTime || 0" 
-                [style.--progress]="currentSongProgress + '%'"
+            <input type="range" class="form-range crossfade-slider" [min]="0" [max]="currentSongDuration || 0"
+                [value]="currentSongTime || 0" [style.--progress]="currentSongProgress + '%'"
                 (input)="handleSeek($event)" />
 
             <span class="time text-white small">{{ duration }}</span>
